# advent-of-code-2023

./: Cargo.toml  day-06.bench.txt  dhat-heap.json  justfile
daily-template/: Cargo.toml
day-01/: Cargo.toml
day-01/src/: custom_error.rs  part1.rs  part2.rs
day-02/: Cargo.toml
day-02/src/: part1.rs  part2.rs
day-03/: Cargo.toml  map-dbg  number_map.txt  vec.txt
day-03/src/: custom_error.rs  part1.rs
day-04/: Cargo.toml
day-04/src/: custom_error.rs  part1.rs  part2.rs
day-05/: Cargo.toml
day-05/src/: custom_error.rs  part1.rs
day-06/: Cargo.toml
day-06/src/: custom_error.rs  part1.rs  part2.rs
day-07/: Cargo.toml
day-07/src/: custom_error.rs  part1.rs  part2.rs
day-08/: Cargo.toml
day-08/src/: custom_error.rs  part1.rs  part2.rs
day-09/: Cargo.toml
day-09/src/: part1.rs  part2.rs
day-10/: Cargo.toml
day-10/src/: part1.rs
day-11/: Cargo.toml
day-11/src/: part1.rs
