[workspace.dependencies]
dhat = "0.3.2"
divan = "0.1.3"
miette = { version = "5.10.0", features = ["fancy"] }
nom = "7.1.3"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[workspace]
resolver = "2"

members = ["day-*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dhat]
inherits = "release"
debug = 1

[profile.flamegraph]
inherits = "release"
debug = true
