[package]
name = "day-11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhat = { workspace = true }
divan = { workspace = true }
miette = { workspace = true }
ndarray = "0.15.6"
nom = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "day-11"
path = "benches/benchmarks.rs"
harness = false

[features]
dhat-heap = []
